# cppclip

./: .gitignore  CMakeLists.txt  CppClip.hpp  README.md  example.cpp  main.cpp
.github/workflows/: cmake-multi-platform.yml
tests/: add_test.cpp  help_test.cpp  nargs_test.cpp
